added autofocus to 'me'

--- a/index.html
+++ b/index.html
@@ -71,10 +71,8 @@
   </thead>
   <tbody>
     <tr>
-      <div class="list-group">
-        <td> <input class="btn btn-outline-dark" type="button" value="Me" onclick="ShowAndHide()"></td>
+        <td> <input class="btn btn-outline-dark" type="button" value="Me" onclick="ShowAndHide()" autofocus></td>
         <td> <input class ="btn btn-outline-dark" type="button" value="We" onclick="ShowAndHide2()"></td>
-        </div>
     </tr>
         </form>
         <form class="row align-items-center justify-content-center">
