add bottom margin to section

--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
     <div class="row align-items-center" id="container">
         <div class="col-md-6 ">
             <div class="row justify-content-center justify-content-center">
-                <div class="col-10 col-lg-8 ">
+                <div class="col-10 col-lg-8 mb-5">
             <img class="img-responsive" src="./images/product.png" id="product"/>
           </div>
         </div>
       </div>
       <div class="col-md-6">
           <div class="row align-items-center justify-content-center">
-              <div class="col-10 col-lg-8">
+              <div class="col-10 col-lg-8 mb-5">
         <h1 class="" id="h1">Cube Sleep System with Chilipad™ Cool Mesh™</h1>
           <p>The&nbsp;Cube is our pioneer sleep system. It’s comprised of a reversible hydro-powered mattress pad, thermal regulating control unit(s) and a remote making it perfect for one or two sleepers! Utilizing hydropower (water), this sleep system operates between 55-115°F (13-46°C), helping encourage quality, restorative sleep.<br><br><i>*Compatible with versions 2.0/3.0 of the Chilipad™ Cool Mesh™</i></p>
         </div>
